# utilities

./: .gitignore  CMakeLists.txt  README.md  find_external_packages.cmake
examples/: algorithm_utils.cpp  communication_utils.cpp  container_helpers_utils.cpp  container_helpers_utils.h  container_utils.cpp  data_structures_utils.cpp  memory_utils.cpp  numeric_utils.cpp  parallel_utils.cpp  parser_utils.cpp  programming_paradigms_utils.cpp  stream_utils.cpp  string_utils.cpp  time_utils.cpp
include/: utils.h
include/algorithms/: algorithm_utils.h  join_range.h  range_cxx11_algorithms.h
include/communication/: communication_utils.h
include/container_helpers/: container_overloads.h  helpers_utils.h  laravel_utils.h  matlab_utils.h  php regexes.txt  php_utils.h
include/container_helpers/matlab-like/: matlab_generator_utils.h  matlab_method_utils.h  matlab_operator_utils.h
include/containers/: container_utils.h  graph.h
include/data_structures/: csv.h  data_structures_utils.h  var.cpp  var.h
include/memory/: memory_utils.h
include/numeric/: numeric_utils.h  random_shortcuts.h  statistics.h
include/paradigms/: demangle.h  programming_paradigms_utils.h  traits.hpp
include/parallel/: parallel_utils.h
include/stream/: cout_plot.h  logging.h  plots.h  progress_bar.h  stream_utils.h
include/stream/pretty_table/: centered.h  enums.h  error.h  pretty_table.h  row.h
include/strings/: php-like.h  safe_getline.h  string_utils.h
include/time/: time_utils.h
